# runa

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  release.toml
.github/workflows/: ci.yml  release-metadata.yml  release.yml
.runa/: config.toml  state.toml
.runa/workspace/behavior-contract/: behavior-contract-174-prose-survey-entry.json
.runa/workspace/work-unit/: work-unit-c39f7efff58a77480079647102aabfd0ec2657898da7b0792ef5872e6a41e35b.json
adapters/: agent-claude-code.sh  agent-codex.sh
contracts/forge-address/: conformance.json  forge-address.schema.json
docs/: PRINCIPLES.md  cli-reference.md  interface-contract.md  methodology-authoring-guide.md  security.md  session-surface-contract.md
docs/adr/: 0001-sovereignty.md  0002-everything-earns-its-place.md  0003-unconditional-responsibility.md  0004-compound-improvement.md
docs/architecture/decisions/: 0001-single-state-assess-and-route-operation.md  0002-operator-intent-seeding-wish.md  README.md
examples/: agent-claude-code.sh
examples/quickstart-methodology/: README.md  manifest.toml
examples/quickstart-methodology/protocols/draft/: PROTOCOL.md
examples/quickstart-methodology/protocols/review/: PROTOCOL.md
examples/quickstart-methodology/protocols/summarize/: PROTOCOL.md
examples/quickstart-methodology/schemas/: design.schema.json  request.schema.json  requirements.schema.json  review-report.schema.json  summary.schema.json
libagent/: Cargo.toml
libagent/src/: activation.rs  completion.rs  context.rs  enforcement.rs  entry.rs  forge_address.rs  forge_take.rs  graph.rs  lib.rs  logging.rs  manifest.rs  model.rs  project.rs  projection.rs  scan.rs  scoped_identity.rs  selection.rs  session.rs  status.rs  store.rs  test_helpers.rs  transcript.rs  trigger.rs  util.rs  validation.rs  work_unit_identity.rs
runa-cli/: Cargo.toml
runa-cli/src/: exit_codes.rs  main.rs  project.rs
runa-cli/src/commands/: doctor.rs  entry.rs  go.rs  init.rs  list.rs  mod.rs  protocol_eval.rs  run.rs  scan.rs  signal.rs  skill_eval.rs  state.rs  status.rs  step.rs  take.rs
runa-cli/tests/: doctor.rs  e2e.rs  entry.rs  go.rs  init.rs  list.rs  release_check.rs  run.rs  scan.rs  signal.rs  state.rs  status.rs  step.rs  workspace_contract.rs
runa-cli/tests/common/: mod.rs
runa-cli/tests/fixtures/: commons-exit-codes.json
runa-connector-github/: Cargo.toml
runa-connector-github/src/: lib.rs
runa-connector-github/tests/: cold_start.rs
runa-connector-registry/: Cargo.toml
runa-connector-registry/src/: lib.rs
runa-connector-registry/tests/: guards.rs
runa-connector-sourcehut/: Cargo.toml
runa-connector-sourcehut/src/: lib.rs
runa-connector-sourcehut/tests/: cold_start.rs
runa-forge/: Cargo.toml
runa-forge-capability/: Cargo.toml
runa-forge-capability/src/: lib.rs
runa-forge-compose/: Cargo.toml
runa-forge-compose/src/: lib.rs
runa-forge-compose/tests/: compose.rs
runa-forge-connectors/: Cargo.toml
runa-forge-connectors/src/: lib.rs
runa-forge-contract/: Cargo.toml
runa-forge-contract/src/: lib.rs
runa-forge-contract/tests/: contract.rs
runa-forge-github/: Cargo.toml
runa-forge-github/src/: lib.rs
runa-forge-github/tests/: github.rs  references.rs
runa-forge-sourcehut/: Cargo.toml
runa-forge-sourcehut/src/: lib.rs
runa-forge-sourcehut/tests/: references.rs  sourcehut.rs
runa-forge-sourcehut/tests/fixtures/: todo.sr.ht.schema.graphqls
runa-forge/src/: lib.rs
runa-forge/tests/: capability.rs
runa-mcp/: Cargo.toml
runa-mcp/src/: context.rs  handler.rs  main.rs
runa-mcp/tests/: forge_connectors.rs  stdio.rs
runa-toolset/: Cargo.toml
runa-toolset/src/: lib.rs
runa-toolset/tests/: composition.rs
scripts/: release-check  verify-release-adoption.sh
