[workspace]
members = [
    "runa-cli",
    "libagent",
    "runa-mcp",
    "runa-forge-contract",
    "runa-forge-github",
    "runa-forge-sourcehut",
    "runa-forge-compose",
]
resolver = "3"

[workspace.package]
version = "0.2.0-rc.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
libagent = { path = "libagent" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
jsonschema = { version = "0.45", default-features = false }
apollo-compiler = "1.32.0"
toml = "0.8"
sha2 = "0.10"
rmcp = { version = "1.7.0", features = ["transport-io", "server"] }
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ctrlc = "3.4"
libc = "0.2"
runa-forge-contract = { path = "runa-forge-contract" }
runa-forge-github = { path = "runa-forge-github" }
runa-forge-sourcehut = { path = "runa-forge-sourcehut" }
runa-forge-compose = { path = "runa-forge-compose" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
