[package]
name = "libagent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
