[package]
name = "libagent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
runa-forge-contract.workspace = true
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
