[package]
name = "runa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "runa"
path = "src/main.rs"

[dependencies]
libagent.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
