[package]
name = "runa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "../CHANGELOG.md", search = "^## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] — {{date}}", exactly = 1, prerelease = true },
]

[[bin]]
name = "runa"
path = "src/main.rs"

[dependencies]
libagent.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true
ctrlc.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
