[package]
name = "runa-forge-sourcehut"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runa-forge-contract.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
apollo-compiler.workspace = true
tempfile.workspace = true
