[package]
name = "runa-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "runa-mcp"
path = "src/main.rs"

[dependencies]
libagent.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
