[package]
name = "runa-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "runa-mcp"
path = "src/main.rs"

[dependencies]
clap.workspace = true
libagent.workspace = true
runa-forge-connectors.workspace = true
runa-forge-contract.workspace = true
runa-forge-github.workspace = true
runa-forge-sourcehut.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
jsonschema.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["process", "time"] }
